--- a/filestore/pom.xml
+++ b/filestore/pom.xml
@@ -42,6 +42,11 @@ LICENSE file.
       <artifactId>core</artifactId>
       <version>0.14.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
   </dependencies>
 
 </project>
