--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,20 +16,21 @@ permissions and limitations under the License. See accompanying
 LICENSE file.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.yahoo.ycsb</groupId>
     <artifactId>root</artifactId>
     <version>0.14.0-SNAPSHOT</version>
   </parent>
-  
+
   <artifactId>core</artifactId>
   <name>Core YCSB</name>
   <packaging>jar</packaging>
 
   <properties>
-     <jackson.api.version>1.9.4</jackson.api.version>
+    <jackson.api.version>1.9.4</jackson.api.version>
   </properties>
 
   <dependencies>
@@ -79,7 +80,7 @@ LICENSE file.
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
