Added ApacheJena module and client.

--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -29,6 +29,7 @@ accumulo1.7:com.yahoo.ycsb.db.accumulo.AccumuloClient
 accumulo1.8:com.yahoo.ycsb.db.accumulo.AccumuloClient
 accumulo:com.yahoo.ycsb.db.accumulo.AccumuloClient
 aerospike:com.yahoo.ycsb.db.AerospikeClient
+apachejena:com.yahoo.ycsb.db.ApacheJenaClient
 arangodb3:com.yahoo.ycsb.db.arangodb.ArangoDB3Client
 arangodb:com.yahoo.ycsb.db.ArangoDBClient
 asynchbase:com.yahoo.ycsb.db.AsyncHBaseClient
